--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -4,13 +4,13 @@
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a href="#tags" translate="tatami.tags.myTags"></a>
+                        <a href="#account/tags" translate="tatami.tags.myTags"></a>
                     </li>
                     <li>
-                        <a href="#tags/recommended" translate="tatami.tags.trends"></a>
+                        <a href="#account/tags/recommended" translate="tatami.tags.trends"></a>
                     </li>
                     <li>
-                        <a href="#tags/search" translate="tatami.tags.search"></a>
+                        <a href="#account/tags/search" translate="tatami.tags.search"></a>
                     </li>
                 </ul>
             </div>
