--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -4,13 +4,13 @@
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a href="#users" translate="tatami.users.myFriends"></a>
+                        <a href="#account/users" translate="tatami.users.myFriends"></a>
                     </li>
                     <li>
-                        <a href="#users/recommended" translate="tatami.users.recommend"></a>
+                        <a href="#account/users/recommended" translate="tatami.users.recommend"></a>
                     </li>
                     <li>
-                        <a href="#users/search" translate="tatami.users.search"></a>
+                        <a href="#account/users/search" translate="tatami.users.search"></a>
                     </li>
                 </ul>
             </div>
