Got tabs to switch, and load different data based on tabs for groups and tags

--- a/src/main/webapp/app/components/account/files/FilesView.html
+++ b/src/main/webapp/app/components/account/files/FilesView.html
@@ -1,5 +1,5 @@
 <div class="col-span-8">
-    <div class="alert alert-status" ng-controller="FilesController">
+    <div class="alert alert-status">
         <div >
             <h2 translate="tatami.files.title"></h2>
             <span class="file-infos"></span>
