--- a/src/main/webapp/app/components/account/password/PasswordView.html
+++ b/src/main/webapp/app/components/account/password/PasswordView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="PasswordController">
+        <div>
             <form class="form-horizontal row-fluid">
                 <h2 translate="tatami.password.title"></h2>
                 <fieldset>
