--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -1,50 +1,55 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="TagsController" ng-init="getTags()">
+        <div>
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
-                    <li class="active">
+                    <li ng-class="{ 'active': isActive('/account/tags') }">
                         <a href="#account/tags" translate="tatami.tags.myTags"></a>
                     </li>
-                    <li>
+                    <li ng-class="{ 'active': isActive('/account/tags/recommended') }">
                         <a href="#account/tags/recommended" translate="tatami.tags.trends"></a>
                     </li>
-                    <li>
+                    <li ng-class="{ 'active': isActive('/account/tags/search') }">
                         <a href="#account/tags/search" translate="tatami.tags.search"></a>
                     </li>
                 </ul>
             </div>
-            <table class="table noCollapse">
-                <tbody>
-                    <tr>
-                        <th style="border-top :0" translate="tatami.tags.tag"></th>
-                        <th style="border-top :0"></th>
-                    </tr>
-                </tbody>
-                <tbody class="items">
-                    <div>
-                        <tr ng-repeat="tag in tags">
-                            <td>
-                                <a href="/tatami/home/#/tags/{{ tag.name }}" title="{{ tag.name }}">#{{ tag.name }}</a>
-                            </td>
-                            <td class="follow" ng-show="!tag.followed">
-                                <a class="btn-title toggleTag pull-right label labelSizeNormal  " ng-click="follow(tag)">
-                                    <span class="glyphicon glyphicon-plus">
-                                        <span class="hidden-phone" translate="tatami.tags.follow"></span>
-                                    </span>
-                                </a>
-                            </td>
-                            <td class="follow" ng-show="tag.followed">
-                                <a class="btn-title toggleTag pull-right label labelSizeNormal label-info " ng-click="follow(tag)">
-                                    <span class="glyphicon glyphicon-minus">
-                                        <span class="hidden-phone" translate="tatami.tags.followed"></span>
-                                    </span>
-                                </a>
-                            </td>
+            <div>
+                <form class="row-fluid littleMargeBot">
+                    <input ng-show="isActive('/account/tags/search')" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
+                </form>
+                <table class="table noCollapse">
+                    <tbody>
+                        <tr>
+                            <th style="border-top :0" translate="tatami.tags.tag"></th>
+                            <th style="border-top :0"></th>
                         </tr>
-                    </div>
-                </tbody>
-            </table>
+                    </tbody>
+                    <tbody class="items">
+                        <div>
+                            <tr ng-repeat="tag in tags">
+                                <td>
+                                    <a href="/tatami/home/#/tags/{{ tag.name }}" title="{{ tag.name }}">#{{ tag.name }}</a>
+                                </td>
+                                <td class="follow" ng-show="!tag.followed">
+                                    <a class="btn-title toggleTag pull-right label labelSizeNormal  " ng-click="follow(tag)">
+                                        <span class="glyphicon glyphicon-plus">
+                                            <span class="hidden-phone" translate="tatami.tags.follow"></span>
+                                        </span>
+                                    </a>
+                                </td>
+                                <td class="follow" ng-show="tag.followed">
+                                    <a class="btn-title toggleTag pull-right label labelSizeNormal label-info " ng-click="follow(tag)">
+                                        <span class="glyphicon glyphicon-minus">
+                                            <span class="hidden-phone" translate="tatami.tags.followed"></span>
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </div>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
