--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -4,19 +4,19 @@
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
                     <li ng-class="{ 'active': isActive('/account/tags') }">
-                        <a href="#account/tags" translate="tatami.tags.myTags"></a>
+                        <a ui-sref="account.tags" translate="tatami.tags.myTags"></a>
                     </li>
                     <li ng-class="{ 'active': isActive('/account/tags/recommended') }">
-                        <a href="#account/tags/recommended" translate="tatami.tags.trends"></a>
+                        <a ui-sref="account.tags.recommended" translate="tatami.tags.trends"></a>
                     </li>
                     <li ng-class="{ 'active': isActive('/account/tags/search') }">
-                        <a href="#account/tags/search" translate="tatami.tags.search"></a>
+                        <a ui-sref="account.tags.search" translate="tatami.tags.search"></a>
                     </li>
                 </ul>
             </div>
             <div>
                 <form class="row-fluid littleMargeBot">
-                    <input ng-show="isActive('/account/tags/search')" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
+                    <input ng-show="$state.current.name === 'account.tags.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
                 </form>
                 <table class="table noCollapse">
                     <tbody>
