--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -3,37 +3,42 @@
         <div>
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
-                    <li ng-class="{ 'active': isActive('/account/users') }">
+                    <li ng-class="{ 'active': $state.current.name === 'account.users' }">
                         <a ui-sref="account.users" translate="tatami.users.myFriends"></a>
                     </li>
-                    <li ng-class="{ 'active': isActive('/account/users/recommended') }">
+                    <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
                         <a ui-sref="account.users.recommended" translate="tatami.users.recommend"></a>
                     </li>
-                    <li ng-class="{ 'active': isActive('/account/users/search') }">
+                    <li ng-class="{ 'active': $state.current.name === 'account.users.search' }">
                         <a ui-sref="account.users.search" translate="tatami.users.search"></a>
                     </li>
                 </ul>
             </div>
-            <div class="useritem" ng-repeat="users in usersGroup">
-                <div class="pull-left background-image-fffix">
-                    <div class="img img-rounded img-medium" style="background-image: url(/tatami/avatar/{{ users.avatar }}/photo.jpg);"></div>
+            <div>
+                <form class="row-fluid littleMargeBot">
+                    <input ng-show="$state.current.name === 'account.users.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="Enter your search">
+                </form>
+                <div class="useritem" ng-repeat="users in usersGroup">
+                    <div class="pull-left background-image-fffix">
+                        <div class="img img-rounded img-medium" style="background-image: url(/tatami/avatar/{{ users.avatar }}/photo.jpg);"></div>
+                    </div>
+                    <h4>
+                        <span class="toggleFriend pointer pull-right label label-info">
+                            <span class="glyphicon glyphicon-minus"></span>
+                        </span>
+                        <a href="/tatami/home/#/users/{{ users.username }}">
+                            <strong>
+                                {{ users.firstName }} + ' ' + {{ users.lastName }}
+                            </strong>
+                        </a>
+                        <br>
+                        <a href="/tatami/home/#/users/{{ users.username }}">
+                            <small>
+                                @{{ users.username }}
+                            </small>
+                        </a>
+                    </h4>
                 </div>
-                <h4>
-                    <span class="toggleFriend pointer pull-right label label-info">
-                        <span class="glyphicon glyphicon-minus"></span>
-                    </span>
-                    <a href="/tatami/home/#/users/{{ users.username }}">
-                        <strong>
-                            {{ users.firstName }} + ' ' + {{ users.lastName }}
-                        </strong>
-                    </a>
-                    <br>
-                    <a href="/tatami/home/#/users/{{ users.username }}">
-                        <small>
-                            @{{ users.username }}
-                        </small>
-                    </a>
-                </h4>
             </div>
         </div>
     </div>
