--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -5,11 +5,11 @@
             <div>
                 <div class="nomargin well row avatar-float-left-container">
                     <div class="col-span-5 text-center">
-                        <a href="/tatami/home/users/{{ user.username }}/">
+                        <a href="/tatami/home/users/{{ profile.username }}/">
                             <!-- Setting src="{{ avatarURL }}" causes a MIME type message, not sure why -->
-                            <img class="pull-left nomargin avatar avatar-float-left" ng-src="{{ avatarURL }}" alt="">
-                            <h3 class="user-profile" ng-cloak>{{ user.firstName + ' ' + user.lastName }}</h3>
-                            <p>@{{ user.username }}</p>
+                            <img class="pull-left nomargin avatar avatar-float-left" ng-src="{{ profile.avatarURL }}">
+                            <h3 class="user-profile" ng-cloak>{{ profile.firstName + ' ' + profile.lastName }}</h3>
+                            <p>@{{ profile.username }}</p>
                         </a>
                     </div>
                 </div>
