--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -13,11 +13,8 @@
             <textarea ng-trim="false" ng-if="!current.reply" popover="{{ 'tatami.tatam.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" placeholder="{{ 'tatami.post.update' | translate}}" maxlength="750" rows="5" required="required"></textarea>
             <textarea ng-trim="false" ng-if="current.reply" popover="{{ 'tatami.tatam.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" maxlength="750" rows="5" required="required"></textarea>
             <div>
-                <em>
-                    {{'tatami.post.characters.left' | translate}}
-                    <span class="countstatus badge">{{ charCount-status.content.length }}</span>
-                </em>
-                <a href="https://help.github.com/articles/markdown-basics/" translate="tatami.post.markdown"></a>
+                {{'tatami.post.characters.left' | translate}} <span class="countstatus badge">{{ charCount-status.content.length }}</span>
+                <a id="markdownBasics" href="https://help.github.com/articles/markdown-basics/" translate="tatami.post.markdown"></a>
             </div>
         </fieldset>
         <fieldset ng-if="current.preview" class="preview-tatam row-fluid">
