fixed translation key and timeline avatars disappearing

--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -41,7 +41,7 @@
                                 <td class="follow" ng-show="tag.followed">
                                     <a class="btn-title toggleTag pull-right label labelSizeNormal label-info " ng-click="follow(tag)">
                                         <span class="glyphicon glyphicon-minus">
-                                            <span class="hidden-phone" translate="tatami.tags.followed"></span>
+                                            <span class="hidden-phone" translate="tatami.tags.following"></span>
                                         </span>
                                     </a>
                                 </td>
