--- a/src/main/webapp/app/components/account/groups/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsManageView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div>HI</div>
+        <div>{{$state.current.name}}</div>
         <div>
             <form class="form-horizontal row-fluid">
                 <h2>
