Changed the state configuration so account.groups is the parent of account.groups.list, account.groups.recommended, account.groups.search, and account.groups.manage

--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -50,8 +50,8 @@
 
                 <div class="tabMenu">
                     <ul class="nav nav-tabs">
-                        <li ng-class="{ 'active': $state.current.name === 'account.groups' }">
-                            <a ui-sref="account.groups" translate="tatami.groups.myGroups">
+                        <li ng-class="{ 'active': $state.current.name === 'account.groups.list' }">
+                            <a ui-sref="account.groups.list" translate="tatami.groups.myGroups">
                             </a>
                         </li>
                         <li ng-class="{ 'active': $state.current.name === 'account.groups.recommended' }">
